force-app/main/default/objects/ResponseObject__c/ResponseObject__c.object-meta.xml
<CustomObject>
    <label>ResponseObject</label>
    <nameField>
        <label>ResponseObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>