force-app/main/default/objects/ResponseObject__c/fields/CorrectResponse__c.field-meta.xml
<CustomField>
    <fullName>CorrectResponse__c</fullName>
    <label>CorrectResponse</label>
    <length>250</length>
    <type>Text</type>
</CustomField>