force-app/main/default/objects/ResponseObject__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <label>QuestionId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>