force-app/main/default/objects/ResponseObject__c/fields/SelectedResponse__c.field-meta.xml
<CustomField>
    <fullName>SelectedResponse__c</fullName>
    <label>SelectedResponse</label>
    <length>250</length>
    <type>Text</type>
</CustomField>